Add FEND Project 3 to portfolio.  Add GitHub repo links to index.html

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div id="main">
         <h1>Patrick Roche's GitHub Portfolio</h1>
+        <hr>
         <h2>Welcome to my portfolio!</h2>
-
         <h3><a target="_blank" href="https://github.com/plr108">github.com/plr108</a></h3>
         <h3><a target="_blank" href= "https://www.linkedin.com/in/patrickroche1">linkedin.com/in/patrickroche1</a></h3>
         <h3><a href="mailto:patrick.l.roche@gmail.com">patrick.l.roche@gmail.com</a></h3>
@@ -21,8 +21,13 @@
         <h3>Featured Repositories</h3>
         <hr>
         <div id="project">
-            <div id="title"><a href="/portfolio/FEND5-1/index.html">Udacity Front-End Nanodegree Project 5-1: Neighborhood Map Project</a></div>
-            <div id="description">A single page application showing all of the ballparks in Major League Baseball. This project is part of Udacity's Front-End Web Developer Nanodegree.</div>
+            <div id="title"><a target="_blank" href="/portfolio/FEND5-1/index.html">Udacity Front-End Nanodegree Project 5-1: Neighborhood Map Project</a></div>
+            <div id="description">A single page application showing all of the ballparks in Major League Baseball. This project is part of Udacity's Front-End Web Developer Nanodegree.  <a target="_blank" href="https://github.com/plr108/FrontEndNanodegreeProject5-1">[GitHub Repository]</a></div>
+        </div>
+        <hr>
+        <div id="project">
+            <div id="title"><a target="_blank" href="/portfolio/FEND3/index.html">Udacity Front-End Nanodegree Project 3: Frogger Clone</a></div>
+            <div id="description">A Frogger clone web game written in JavaScript. Feed the Ladybugs.  <a target="_blank" href="https://github.com/plr108/FrontEndNanodegreeProject3">[GitHub Repository]</a></div>
         </div>
         <hr>
     </div>
