Update index.html font to Noto Sans

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <hr>
     </div>
-    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 </body>
 
 </html>
