Add FEND Project 6 to portfolio

--- a/index.html
+++ b/index.html
@@ -22,12 +22,17 @@
         <hr>
         <div id="project">
             <div id="title"><a target="_blank" href="/portfolio/FEND5-1/index.html">Udacity Front-End Nanodegree Project 5-1: Neighborhood Map Project</a></div>
-            <div id="description">A single page application showing all of the ballparks in Major League Baseball. This project is part of Udacity's Front-End Web Developer Nanodegree.  <a target="_blank" href="https://github.com/plr108/FrontEndNanodegreeProject5-1">[GitHub Repository]</a></div>
+            <div id="description">A single page application showing all of the ballparks in Major League Baseball.  This project is part of Udacity's Front-End Web Developer Nanodegree.<a target="_blank" href="https://github.com/plr108/FrontEndNanodegreeProject5-1">[GitHub Repository]</a></div>
         </div>
         <hr>
         <div id="project">
             <div id="title"><a target="_blank" href="/portfolio/FEND3/index.html">Udacity Front-End Nanodegree Project 3: Frogger Clone</a></div>
-            <div id="description">A Frogger clone web game written in JavaScript. Feed the Ladybugs.  <a target="_blank" href="https://github.com/plr108/FrontEndNanodegreeProject3">[GitHub Repository]</a></div>
+            <div id="description">A Frogger clone web game written in JavaScript. Feed the Ladybugs.  This project is part of Udacity's Front-End Web Developer Nanodegree.<a target="_blank" href="https://github.com/plr108/FrontEndNanodegreeProject3">[GitHub Repository]</a></div>
+        </div>
+        <hr>
+        <div id="project">
+            <div id="title"><a target="_blank" href="/portfolio/FEND6/index.html">Udacity Front-End Nanodegree Project 6: JavaScript Testing with Jasmine</a></div>
+            <div id="description">An example of testing a pre-existing web application using the Jasmine JavaScript testing framework.  This project is part of Udacity's Front-End Web Developer Nanodegree.<a target="_blank" href="https://github.com/plr108/FrontEndNanodegreeProject6">[GitHub Repository]</a></div>
         </div>
         <hr>
     </div>
