--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
             <div id="description">An example of testing and test-driven development using the Jasmine JavaScript testing framework.  This project is part of Udacity's Front-End Web Developer Nanodegree.  <a target="_blank" href="https://github.com/plr108/FrontEndNanodegreeProject6">[GitHub Repository]</a></div>
         </div>
         <hr>
+        <div id="project">
+            <div id="title"><a target="_blank" href="/portfolio/MCCKO/index.html">MCC Sings Site</a></div>
+            <div id="description">MCC Sings Site  <a target="_blank" href="https://github.com/plr108/mccsings.com">[GitHub Repository]</a></div>
+        </div>
+        <hr>
     </div>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 </body>
