--- a/index.html
+++ b/index.html
@@ -21,18 +21,23 @@
         <h3>Featured Repositories</h3>
         <hr>
         <div id="project">
+            <div id="title"><a target="_blank" href="/portfolio/FEND6/index.html">Udacity Front-End Nanodegree Project 6: JavaScript Testing with Jasmine</a></div>
+            <div id="description">An example of testing and test-driven development using the Jasmine JavaScript testing framework.  This project is part of Udacity's Front-End Web Developer Nanodegree.  <a target="_blank" href="https://github.com/plr108/FrontEndNanodegreeProject6">[GitHub Repository]</a></div>
+        </div>
+        <hr>
+        <div id="project">
             <div id="title"><a target="_blank" href="/portfolio/FEND5-1/index.html">Udacity Front-End Nanodegree Project 5-1: Neighborhood Map Project</a></div>
             <div id="description">A web application displaying information about the ballparks for all 30 Major League Baseball Teams using KnockoutJS, Google Maps JavaScript API, MediaWiki API, and Flickr API.  <a target="_blank" href="https://github.com/plr108/FrontEndNanodegreeProject5-1">[GitHub Repository]</a></div>
         </div>
         <hr>
         <div id="project">
-            <div id="title"><a target="_blank" href="/portfolio/FEND3/index.html">Udacity Front-End Nanodegree Project 3: Frogger Clone</a></div>
-            <div id="description">A Frogger clone web game written in JavaScript. Feed the Ladybugs.  This project is part of Udacity's Front-End Web Developer Nanodegree.  <a target="_blank" href="https://github.com/plr108/FrontEndNanodegreeProject3">[GitHub Repository]</a></div>
+            <div id="title"><a target="_blank" href="/portfolio/FEND4/index.html">Udacity Front-End Nanodegree Project 4: Website Performance Optimization</a></div>
+            <div id="description">Optimized a pre-existing website to achieve a PageSpeed Insights score of 94/100.  Optimized a pre-existing, animation-intensive website to run at 60 fps.<a target="_blank" href="https://github.com/plr108/FrontEndNanodegreeProject4">[GitHub Repository]</a></div>
         </div>
         <hr>
         <div id="project">
-            <div id="title"><a target="_blank" href="/portfolio/FEND6/index.html">Udacity Front-End Nanodegree Project 6: JavaScript Testing with Jasmine</a></div>
-            <div id="description">An example of testing and test-driven development using the Jasmine JavaScript testing framework.  This project is part of Udacity's Front-End Web Developer Nanodegree.  <a target="_blank" href="https://github.com/plr108/FrontEndNanodegreeProject6">[GitHub Repository]</a></div>
+            <div id="title"><a target="_blank" href="/portfolio/FEND3/index.html">Udacity Front-End Nanodegree Project 3: Frogger Clone</a></div>
+            <div id="description">A Frogger clone web game written in JavaScript. Feed the Ladybugs.  This project is part of Udacity's Front-End Web Developer Nanodegree.  <a target="_blank" href="https://github.com/plr108/FrontEndNanodegreeProject3">[GitHub Repository]</a></div>
         </div>
         <hr>
         <div id="project">
