Update font to Lato.  Update MCC Sings description and link.

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         </div>
         <hr>
         <div id="project">
-            <div id="title"><a target="_blank" href="/portfolio/MCCKO/index.html">MCC Sings Site</a></div>
-            <div id="description">MCC Sings Site  <a target="_blank" href="https://github.com/plr108/mccsings.com">[GitHub Repository]</a></div>
+            <div id="title"><a target="_blank" href="/portfolio/MCCKO/index.html">Freelance Project: Masterworks Concert Chorale</a></div>
+            <div id="description">A responsive web page I built for a non-profit concert group in Murrysville, Pennsylvania.  The site uses KnockoutJS and Bootstrap.<a target="_blank" href="https://github.com/plr108/mccsings">[GitHub Repository]</a></div>
         </div>
         <hr>
     </div>
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </body>
 
 </html>
