--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         </div>
         <hr>
         <div id="project">
+            <div id="title"><a target="_blank" href="/portfolio/FEND2/index.html">Udacity Front-End Nanodegree Project 2: Online Resume</a></div>
+            <div id="description">An interactive version of my resume.<a target="_blank" href="https://github.com/plr108/FrontEndNanodegreeProject2">[GitHub Repository]</a></div>
+        </div>
+        <hr>
+        <div id="project">
             <div id="title"><a target="_blank" href="/portfolio/MCCKO/index.html">Freelance Project: Masterworks Concert Chorale</a></div>
             <div id="description">A responsive web page I built for a non-profit concert group in Murrysville, Pennsylvania.  The site uses KnockoutJS and Bootstrap.  <a target="_blank" href="https://github.com/plr108/mccsings">[GitHub Repository]</a></div>
         </div>
