--- a/portfolio/FEND2/index.html
+++ b/portfolio/FEND2/index.html
@@ -15,7 +15,7 @@
     <script src="js/jquery-2.2.1.min.js"></script>
     <script src="js/helper.js"></script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
 <body>
