Update repository links

--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
         </div>
         <hr>
         <div id="project">
-            <div id="title"><a target="_blank" href="/portfolio/ballpark-map/index.html">Udacity Front-End Nanodegree Project 5-1: Neighborhood Map Project</a></div>
+            <div id="title"><a target="_blank" href="/ballpark-map/index.html">Udacity Front-End Nanodegree Project 5-1: Neighborhood Map Project</a></div>
             <div id="description">A web application displaying information about the ballparks for all 30 Major League Baseball Teams using KnockoutJS, Google Maps JavaScript API, MediaWiki API, and Flickr API. <a target="_blank" href="https://github.com/plr108/ballpark-map">[GitHub Repository]</a></div>
         </div>
         <hr>
         <div id="project">
-            <div id="title"><a target="_blank" href="/portfolio/website-optimization/index.html">Udacity Front-End Nanodegree Project 4: Website Performance Optimization</a></div>
+            <div id="title"><a target="_blank" href="/website-optimization/index.html">Udacity Front-End Nanodegree Project 4: Website Performance Optimization</a></div>
             <div id="description">Optimized a pre-existing website to achieve a PageSpeed Insights score of 94/100. Optimized a pre-existing, animation-intensive website to run at 60 fps. <a target="_blank" href="https://github.com/plr108/website-optimization">[GitHub Repository]</a></div>
         </div>
         <hr>
         <div id="project">
-            <div id="title"><a target="_blank" href="/portfolio/feed-the-ladybugs/index.html">Udacity Front-End Nanodegree Project 3: Frogger Clone</a></div>
+            <div id="title"><a target="_blank" href="/feed-the-ladybugs/index.html">Udacity Front-End Nanodegree Project 3: Frogger Clone</a></div>
             <div id="description">A Frogger clone web game written in JavaScript. Feed the Ladybugs. This project is part of Udacity's Front-End Web Developer Nanodegree. <a target="_blank" href="https://github.com/plr108/feed-the-ladybugs">[GitHub Repository]</a></div>
         </div>
         <hr>
         <div id="project">
-            <div id="title"><a target="_blank" href="/portfolio/resume/index.html">Udacity Front-End Nanodegree Project 2: Online Resume</a></div>
+            <div id="title"><a target="_blank" href="/resume/index.html">Udacity Front-End Nanodegree Project 2: Online Resume</a></div>
             <div id="description">An interactive version of my resume. <a target="_blank" href="https://github.com/plr108/resume">[GitHub Repository]</a></div>
         </div>
         <hr>
         <div id="project">
-            <div id="title"><a target="_blank" href="/portfolio/mccsings/index.html">Freelance Project: Masterworks Concert Chorale</a></div>
+            <div id="title"><a target="_blank" href="/mccsings/index.html">Freelance Project: Masterworks Concert Chorale</a></div>
             <div id="description">A responsive web page I built for a non-profit concert group in Murrysville, Pennsylvania. The site uses KnockoutJS and Bootstrap. <a target="_blank" href="https://github.com/plr108/mccsings">[GitHub Repository]</a></div>
         </div>
         <hr>
