--- a/resume/index.html
+++ b/resume/index.html
@@ -32,7 +32,7 @@
         <div id="workExperience" class="gray">
             <h2>Work Experience</h2>
         </div>
-        <div id="mapDiv">
+        <div id="locations">
             <h2>Where I've Lived and Worked</h2>
         </div>
         <div id="lets-connect" class="dark-gray">
