Update to latest version of resume project

--- a/resume/index.html
+++ b/resume/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<!--Udacity Front End Developer Nanodegree Project 2 Online Resume-->
+<!--Online Resume-->
 <!--By: Patrick Roche patrick.l.roche@gmail.com-->
-<!--Note: I removed most of the default comments in the project files for clarity-->
-
+<!--https://github.com/plr108-->
 <head>
     <meta charset="utf-8">
     <!--Prevent Mobile Safari from automatically detecting phone numbers-->
     <!--Source: https://developers.google.com/web/fundamentals/native-hardware/click-to-call/?hl=en-->
-    <meta name="format-detection" content="telephone=no">
-    <!--Using Noto Sans instead of Roboto Font-->
-    <link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
     <title>Patrick Roche Resume</title>
+    <meta name="format-detection" content="telephone=no">
+    <link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
     <link href="css/style.css" rel="stylesheet">
     <script src="js/jquery-2.2.1.min.js"></script>
     <script src="js/helper.js"></script>
