Update to current version of resume project

--- a/resume/index.html
+++ b/resume/index.html
@@ -19,7 +19,7 @@
 <body>
     <div id="main">
         <div id="header" class="center-content clear-fix">
-            <ul id="topContacts" class="flex-box"></ul>
+            <ul id="topContacts"</ul>
         </div>
         <div id="projects">
             <h2>Projects</h2>
@@ -35,7 +35,7 @@
         </div>
         <div id="lets-connect" class="dark-gray">
             <h2 class="light-blue center-text">Let's Connect</h2>
-            <ul id="footerContacts" class="flex-box">
+            <ul id="footerContacts">
             </ul>
         </div>
     </div>
