Update to latest version of resume proejct

--- a/resume/index.html
+++ b/resume/index.html
@@ -34,7 +34,7 @@
         </div>
         <div id="lets-connect" class="dark-gray">
             <h2 class="light-blue center-text">Let's Connect</h2>
-            <ul id="footer-contacts">
+            <ul class="center-content" id="footer-contacts">
             </ul>
         </div>
     </div>
