--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -40,64 +40,94 @@
         <div id="project-header-container">
             <div id="project-header">Projects</div>
         </div>
-        <div id=project-container>
-            <div class="wrapper">
+        <div id="project-container">
+            <div id="project-1" class="wrapper">
                 <div class="aspect-ratio"></div>
                 <div class="content">
                     <div class="inner-content">
-                        <div class="project-title">Ballpark Map</div>
-                        <div class="project-description">Responsive web app that displays info about the ballparks of Major League Baseball.</div>
-                        <div class="project-repo">GitHub Repository</div>
+                        <div class="project-image-container">
+                            <img class="project-icon" src="images/project1-icon.png">
+                        </div>
+                        <div class="project-text-container">
+                            <div class="project-title">Ballpark Map</div>
+                            <div class="project-description">Responsive web app displaying info about the ballparks of Major League Baseball.</div>
+                            <div class="project-repo">GitHub Repository</div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="wrapper">
+            <div id="project-2" class="wrapper">
                 <div class="aspect-ratio"></div>
                 <div class="content">
                     <div class="inner-content">
-                        <div class="project-title">Feed the Ladybugs</div>
-                        <div class="project-description">Web game based on Frogger (Desktop only). Built using object-oriented JavaScript.</div>
-                        <div class="project-repo">GitHub Repository</div>
+                        <div class="project-image-container">
+                            <img class="project-icon" src="images/project2-icon.png">
+                        </div>
+                        <div class="project-text-container">
+                            <div class="project-title">Feed the Ladybugs</div>
+                            <div class="project-description">Object-oriented JavaScript game based on Frogger (Desktop only).</div>
+                            <div class="project-repo">GitHub Repository</div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="wrapper">
+            <div id="project-3" class="wrapper">
                 <div class="aspect-ratio"></div>
                 <div class="content">
                     <div class="inner-content">
-                        <div class="project-title">Online Resume</div>
-                        <div class="project-description">Enhanced, responsive web app version of my resume.</div>
-                        <div class="project-repo">GitHub Repository</div>
+                        <div class="project-image-container">
+                            <img class="project-icon" src="images/project3-icon.png">
+                        </div>
+                        <div class="project-text-container">
+                            <div class="project-title">Online Resume</div>
+                            <div class="project-description">Enhanced, responsive web app version of my resume.</div>
+                            <div class="project-repo">GitHub Repository</div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="wrapper">
+            <div id="project-4" class="wrapper">
                 <div class="aspect-ratio"></div>
                 <div class="content">
                     <div class="inner-content">
-                        <div class="project-title">Website Optimization</div>
-                        <div class="project-description">Demonstration of improving load times and frame rate of a pre-existing website.</div>
-                        <div class="project-repo">GitHub Repository</div>
+                        <div class="project-image-container">
+                            <img class="project-icon" src="images/project4-icon.png">
+                        </div>
+                        <div class="project-text-container">
+                            <div class="project-title">Website Optimization</div>
+                            <div class="project-description">Demonstration of improving load times and frame rate of a pre-existing website.</div>
+                            <div class="project-repo">GitHub Repository</div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="wrapper">
+            <div id="project-5" class="wrapper">
                 <div class="aspect-ratio"></div>
                 <div class="content">
                     <div class="inner-content">
-                        <div class="project-title">Freelance Work: MCC Sings</div>
-                        <div class="project-description">Created a responsive, Bootstrap-based website for a non-profit concert group.</div>
-                        <div class="project-repo">GitHub Repository</div>
+                        <div class="project-image-container">
+                            <img class="project-icon" src="images/project5-icon.png">
+                        </div>
+                        <div class="project-text-container">
+                            <div class="project-title">Freelance Work: MCC Sings</div>
+                            <div class="project-description">Responsive, Bootstrap-based website I built for a non-profit concert group.</div>
+                            <div class="project-repo">GitHub Repository</div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="wrapper">
+            <div id="project-6" class="wrapper">
                 <div class="aspect-ratio"></div>
                 <div class="content">
                     <div class="inner-content">
-                        <div class="project-title">Jasmine Testing</div>
-                        <div class="project-description">Demonstration of using Test-Driven Development and the Jasmine test framework.</div>
-                        <div class="project-repo">GitHub Repository</div>
+                        <div class="project-image-container">
+                            <img class="project-icon" src="images/project6-icon.png">
+                        </div>
+                        <div class="project-text-container">
+                            <div class="project-title">Jasmine Testing</div>
+                            <div class="project-description">Demonstration of Test-Driven Development using Jasmine framework.</div>
+                            <div class="project-repo">GitHub Repository</div>
+                        </div>
                     </div>
                 </div>
             </div>
