--- a/index.html
+++ b/index.html
@@ -1,56 +1,162 @@
-<!DOCTYPE html>
-<html lang="en">
+﻿<!DOCTYPE html>
+<html>
 
 <head>
+    <title>Patrick Roche - Portfolio</title>
+    <!--Udacity Front End Developer Nanodegree Project 1 - Portfolio Site-->
+    <!--By: Patrick Roche patrick.l.roche@gmail.com-->
+    <meta name="description" content="Patrick Roche -- Online Portfolio">
+    <meta name="author" content="Patrick Roche">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
-    <title>Patrick Roche GitHub Portfolio</title>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Doppio+One|Roboto">
 </head>
 
 <body>
-    <div id="main">
-        <h1>Patrick Roche's GitHub Portfolio</h1>
-        <hr>
-        <h2>Welcome to my portfolio!</h2>
-        <h3><a target="_blank" href="https://github.com/plr108">github.com/plr108</a></h3>
-        <h3><a target="_blank" href= "https://www.linkedin.com/in/patrickroche1">linkedin.com/in/patrickroche1</a></h3>
-        <h3><a href="mailto:patrick.l.roche@gmail.com">patrick.l.roche@gmail.com</a></h3>
-        <hr>
-        <h3>Featured Repositories</h3>
-        <hr>
-        <div id="project">
-            <div id="title"><a target="_blank" href="/jasmine-testing/index.html">Udacity Front-End Nanodegree Project 6: JavaScript Testing with Jasmine</a></div>
-            <div id="description">An example of testing and test-driven development using the Jasmine JavaScript testing framework. This project is part of Udacity's Front-End Web Developer Nanodegree. <a target="_blank" href="https://github.com/plr108/jasmine-testing">[GitHub Repository]</a></div>
+    <div id="main-container">
+        <div id="header">
+            <div id="biopic-name-role">
+                <div id="biopic-container">
+                    <img id="biopic" src="images/me.jpg" alt="Logo Image">
+                </div>
+                <div id="name-role-container">
+                    <div id="name">Patrick Roche</div>
+                    <div id="role">Front-End Web Developer</div>
+                </div>
+            </div>
+            <div id="contact-container">
+                <ul id="contacts">
+                    <li class="contact"><span class="contact-type">Mobile</span><span class="contact-value"><a href="tel:724-875-3487" target="_blank">724-875-3487</a></span></li>
+                    <li class="contact"><span class="contact-type">Email</span><span class="contact-value"><a href="mailto:patrick.l.roche@gmail.com" target="_blank">patrick.l.roche@gmail.com</a></span></li>
+                    <li class="contact"><span class="contact-type">Resume</span><span class="contact-value"><a href="https://drive.google.com/file/d/0Bw9Pzles4ekkT3lEUDlVNzQ5M3M/view?usp=sharing" target="_blank">Word</a><span class="span-dot">•</span><a href="https://drive.google.com/file/d/0Bw9Pzles4ekkWm9Lc0l5MEc2ME0/view?usp=sharing" target="_blank">PDF</a><span class="span-dot">•</span><a href="https://plr108.github.io/resume/index.html" target="_blank">Online</a></span>
+                    </li>
+                    <li class="contact"><span class="contact-type">LinkedIn</span><span class="contact-value"><a href="https://www.linkedin.com/in/patrickroche1" target="_blank">patrickroche1</a></span></li>
+                    <li class="contact"><span class="contact-type">GitHub</span><span class="contact-value"><a href="https://github.com/plr108" target="_blank">plr108</a></span></li>
+                    <li class="contact"><span class="contact-type">Location</span><span class="contact-value"><a href="https://www.google.com/maps/place/Irwin,+PA+15642/@40.3189343,-79.7836634,12z/data=!3m1!4b1!4m2!3m1!1s0x8834dd3f7b945281:0x3ada31dc83155eba" target="_blank">Irwin, PA</a></span></li>
+                </ul>
+            </div>
         </div>
-        <hr>
-        <div id="project">
-            <div id="title"><a target="_blank" href="/ballpark-map/index.html">Udacity Front-End Nanodegree Project 5-1: Neighborhood Map Project</a></div>
-            <div id="description">A web application displaying information about the ballparks for all 30 Major League Baseball Teams using KnockoutJS, Google Maps JavaScript API, MediaWiki API, and Flickr API. <a target="_blank" href="https://github.com/plr108/ballpark-map">[GitHub Repository]</a></div>
+        <div id="project-header-container">
+            <div id="project-header">Featured Projects</div>
         </div>
-        <hr>
-        <div id="project">
-            <div id="title"><a target="_blank" href="/website-optimization/index.html">Udacity Front-End Nanodegree Project 4: Website Performance Optimization</a></div>
-            <div id="description">Optimized a pre-existing website to achieve a PageSpeed Insights score of 94/100. Optimized a pre-existing, animation-intensive website to run at 60 fps. <a target="_blank" href="https://github.com/plr108/website-optimization">[GitHub Repository]</a></div>
+        <div id="project-container">
+            <a class="project-link-white" target="_blank" href="http://plr108.github.io/ballpark-map/index.html">
+                <div id="project-1" class="project">
+                    <div class="aspect-ratio"></div>
+                    <div class="content">
+                        <div class="inner-content">
+                            <div class="project-image-container">
+                                <img class="project-icon" src="images/project1-icon.png" alt="Project 1 Icon: Ballpark Map">
+                            </div>
+                            <div class="project-text-container">
+                                <div class="project-title">Ballpark Map</div>
+                                <div class="project-description">Responsive web app displaying info about the ballparks of Major League Baseball.</div>
+                                <div class="project-repo">
+                                    <a target="_blank" href="https://github.com/plr108/ballpark-map">GitHub Repository</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a class="project-link-white" target="_blank" href="http://plr108.github.io/feed-the-ladybugs/index.html">
+                <div id="project-2" class="project">
+                    <div class="aspect-ratio"></div>
+                    <div class="content">
+                        <div class="inner-content">
+                            <div class="project-image-container">
+                                <img class="project-icon" src="images/project2-icon.png" alt="Project 2 Icon: Feed the Ladybugs">
+                            </div>
+                            <div class="project-text-container">
+                                <div class="project-title">Feed the Ladybugs</div>
+                                <div class="project-description">Object-oriented JavaScript game based on Frogger (Desktop only).</div>
+                                <div class="project-repo">
+                                    <a target="_blank" href="https://github.com/plr108/feed-the-ladybugs">GitHub Repository</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a class="project-link-white" target="_blank" href="http://plr108.github.io/resume/index.html">
+                <div id="project-3" class="project">
+                    <div class="aspect-ratio"></div>
+                    <div class="content">
+                        <div class="inner-content">
+                            <div class="project-image-container">
+                                <img class="project-icon" src="images/project3-icon.png" alt="Project 3 Icon: Online Resume">
+                            </div>
+                            <div class="project-text-container">
+                                <div class="project-title">Online Resume</div>
+                                <div class="project-description">Enhanced, responsive web app version of my resume.</div>
+                                <div class="project-repo">
+                                    <a target="_blank" href="https://github.com/plr108/resume">GitHub Repository</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a class="project-link-black" target="_blank" href="http://plr108.github.io/web-perf/index.html">
+                <div id="project-4" class="project">
+                    <div class="aspect-ratio"></div>
+                    <div class="content">
+                        <div class="inner-content">
+                            <div class="project-image-container">
+                                <img class="project-icon" src="images/project4-icon.png" alt="Project 4 Icon: Website Optimization">
+                            </div>
+                            <div class="project-text-container">
+                                <div class="project-title">Website Optimization</div>
+                                <div class="project-description">Demonstration of improving load times and frame rate for a pre-existing website.</div>
+                                <div class="project-repo">
+                                    <a target="_blank" href="https://github.com/plr108/web-perf">GitHub Repository</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a class="project-link-black" target="_blank" href="http://plr108.github.io/mccsings/index.html">
+                <div id="project-5" class="project">
+                    <div class="aspect-ratio"></div>
+                    <div class="content">
+                        <div class="inner-content">
+                            <div class="project-image-container">
+                                <img class="project-icon" src="images/project5-icon.png" alt="Project 5 Icon: Masterworks Concert Chorale">
+                            </div>
+                            <div class="project-text-container">
+                                <div class="project-title">Freelance Work: MCC Sings</div>
+                                <div class="project-description">Responsive, Bootstrap-based website I built for a non-profit concert group.</div>
+                                <div class="project-repo">
+                                    <a target="_blank" href="https://github.com/plr108/mccsings">GitHub Repository</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a class="project-link-black" target="_blank" href="http://plr108.github.io/jasmine-testing/index.html">
+                <div id="project-6" class="project">
+                    <div class="aspect-ratio"></div>
+                    <div class="content">
+                        <div class="inner-content">
+                            <div class="project-image-container">
+                                <img class="project-icon" src="images/project6-icon.png" alt="Project 6 Icon: Jasmine Testing">
+                            </div>
+                            <div class="project-text-container">
+                                <div class="project-title">Jasmine Testing</div>
+                                <div class="project-description">Demonstration of Test-Driven Development using Jasmine framework.</div>
+                                <div class="project-repo">
+                                    <a target="_blank" href="https://github.com/plr108/jasmine-testing">GitHub Repository</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
         </div>
-        <hr>
-        <div id="project">
-            <div id="title"><a target="_blank" href="/feed-the-ladybugs/index.html">Udacity Front-End Nanodegree Project 3: Frogger Clone</a></div>
-            <div id="description">A Frogger clone web game written in JavaScript. Feed the Ladybugs. This project is part of Udacity's Front-End Web Developer Nanodegree. <a target="_blank" href="https://github.com/plr108/feed-the-ladybugs">[GitHub Repository]</a></div>
-        </div>
-        <hr>
-        <div id="project">
-            <div id="title"><a target="_blank" href="/resume/index.html">Udacity Front-End Nanodegree Project 2: Online Resume</a></div>
-            <div id="description">An interactive version of my resume. <a target="_blank" href="https://github.com/plr108/resume">[GitHub Repository]</a></div>
-        </div>
-        <hr>
-        <div id="project">
-            <div id="title"><a target="_blank" href="/mccsings/index.html">Freelance Project: Masterworks Concert Chorale</a></div>
-            <div id="description">A responsive web page I built for a non-profit concert group in Murrysville, Pennsylvania. The site uses KnockoutJS and Bootstrap. <a target="_blank" href="https://github.com/plr108/mccsings">[GitHub Repository]</a></div>
-        </div>
-        <hr>
     </div>
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </body>
 
 </html>
