--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
             <div id="project-header">Featured Projects</div>
         </div>
         <div id="project-container">
-            <a class="project-link-white" target="_blank" href="http://plr108.github.io/ballpark-map/index.html">
                 <div id="project-1" class="project">
                     <div class="aspect-ratio"></div>
                     <div class="content">
@@ -59,7 +58,6 @@
                         </div>
                     </div>
                 </div>
-            </a>
             <a class="project-link-white" target="_blank" href="http://plr108.github.io/feed-the-ladybugs/index.html">
                 <div id="project-2" class="project">
                     <div class="aspect-ratio"></div>
@@ -157,6 +155,8 @@
             </a>
         </div>
     </div>
+    <script src="js/jquery-2.2.1.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
