--- a/index.html
+++ b/index.html
@@ -41,30 +41,30 @@
             <div id="project-header">Featured Projects</div>
         </div>
         <div id="project-container">
-                <div id="project-1" class="project">
-                    <div class="aspect-ratio"></div>
-                    <div class="content">
-                        <div class="inner-content">
-                            <div class="project-image-container">
-                                <img class="project-icon" src="images/project1-icon.png" alt="Project 1 Icon: Ballpark Map">
-                            </div>
-                            <div class="project-text-container">
-                                <div class="project-title">Ballpark Map</div>
-                                <div class="project-description">Responsive web app displaying info about the ballparks of Major League Baseball.</div>
-                                <div id="project-1-repo" class="project-repo">
-                                    <a target="_blank" href="https://github.com/plr108/ballpark-map">GitHub Repository</a>
-                                </div>
+            <div id="project-1" class="project">
+                <div class="aspect-ratio"></div>
+                <div class="content">
+                    <div class="inner-content">
+                        <div class="project-image-container">
+                            <img id="project-image-1" class="project-image" src="images/project1-icon.png" alt="Project 1 Icon: Ballpark Map">
+                        </div>
+                        <div class="project-text-container">
+                            <div class="project-title">Ballpark Map</div>
+                            <div class="project-description">Responsive web app displaying info about the ballparks of Major League Baseball.</div>
+                            <div id="project-1-repo" class="project-repo">
+                                <a target="_blank" href="https://github.com/plr108/ballpark-map">GitHub Repository</a>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
             <a class="project-link-white" target="_blank" href="http://plr108.github.io/feed-the-ladybugs/index.html">
                 <div id="project-2" class="project">
                     <div class="aspect-ratio"></div>
                     <div class="content">
                         <div class="inner-content">
                             <div class="project-image-container">
-                                <img class="project-icon" src="images/project2-icon.png" alt="Project 2 Icon: Feed the Ladybugs">
+                                <img id="project-image-2" class="project-image" src="images/project2-icon.png" alt="Project 2 Icon: Feed the Ladybugs">
                             </div>
                             <div class="project-text-container">
                                 <div class="project-title">Feed the Ladybugs</div>
@@ -83,7 +83,7 @@
                     <div class="content">
                         <div class="inner-content">
                             <div class="project-image-container">
-                                <img class="project-icon" src="images/project3-icon.png" alt="Project 3 Icon: Online Resume">
+                                <img id="project-image-3" class="project-image" src="images/project3-icon.png" alt="Project 3 Icon: Online Resume">
                             </div>
                             <div class="project-text-container">
                                 <div class="project-title">Online Resume</div>
@@ -102,7 +102,7 @@
                     <div class="content">
                         <div class="inner-content">
                             <div class="project-image-container">
-                                <img class="project-icon" src="images/project4-icon.png" alt="Project 4 Icon: Website Optimization">
+                                <img id="project-image-4" class="project-image" src="images/project4-icon.png" alt="Project 4 Icon: Website Optimization">
                             </div>
                             <div class="project-text-container">
                                 <div class="project-title">Website Optimization</div>
@@ -121,7 +121,7 @@
                     <div class="content">
                         <div class="inner-content">
                             <div class="project-image-container">
-                                <img class="project-icon" src="images/project5-icon.png" alt="Project 5 Icon: Masterworks Concert Chorale">
+                                <img id="project-image-5" class="project-image" src="images/project5-icon.png" alt="Project 5 Icon: Masterworks Concert Chorale">
                             </div>
                             <div class="project-text-container">
                                 <div class="project-title">Freelance Work: MCC Sings</div>
@@ -140,11 +140,11 @@
                     <div class="content">
                         <div class="inner-content">
                             <div class="project-image-container">
-                                <img class="project-icon" src="images/project6-icon.png" alt="Project 6 Icon: Jasmine Testing">
+                                <img id="project-image-6" class="project-image" src="images/project6-icon.png" alt="Project 6 Icon: Jasmine Testing">
                             </div>
                             <div class="project-text-container">
                                 <div class="project-title">Jasmine Testing</div>
-                                <div class="project-description">Demonstration of Test-Driven Development using Jasmine framework.</div>
+                                <div class="project-description">Demonstration of Test-Driven Development using the Jasmine test framework.</div>
                                 <div id="project-6-repo" class="project-repo">
                                     <a target="_blank" href="https://github.com/plr108/jasmine-testing">GitHub Repository</a>
                                 </div>
