feat: update to latest version of web-perf project

--- a/web-perf/index.html
+++ b/web-perf/index.html
@@ -163,7 +163,9 @@
 </head>
 
 <body>
+<div id="project-description" class="hero"><hr><h2>This project involves optimizing a pre-existing webiste.  Please see <a href="https://github.com/plr108/web-perf/blob/master/README.md" target="_blank">my project README</a> for a detailed description of the optimizations made.</h2><hr><div>
     <header>
+
         <a href="/"><img src="img/profilepic.jpg"></a>
         <p>Cameron Pittman
             <br><span>Course Developer</span></p>
