--- a/ballpark-map/index.html
+++ b/ballpark-map/index.html
@@ -14,7 +14,7 @@
         <div id="info" style="display:none" data-bind="visible: infoVisible()">
             <div id="search" data-bind="visible: searchVisible()">
                 <div class="big-text" id="search-header">Major League Ballparks</div>
-                <input class="search-input" id="search-advanced" placeholder="Advanced Search" size="23" data-bind="visible: advancedSearchMode(), advancedSearch, selectedBallparkMarkerID: activeBallparkMarkerID, advancedSearchResult: 'searchResultString'">
+                <input class="search-input" id="search-advanced" placeholder="Advanced Search" size="23" data-bind="visible: advancedSearchMode(), advancedSearch, selectedBallparkMarkerId: activeBallparkMarkerId, advancedSearchResult: 'searchResultString'">
                 <input class="search-input" id="search-regular" placeholder="Regular Search" size="23" data-bind="visible: ! advancedSearchMode(), value: regularSearchQuery, valueUpdate: 'input'" autocomplete="off">
                 <div id="search-mode">
                     <input type="checkbox" name="search-mode-checkbox" data-bind="checked: advancedSearchMode"><span data-bind="text: viewModel.searchModeMessage"></span>
@@ -56,7 +56,7 @@
     <script src="js/lib/jquery.min.js"></script>
     <script src="js/lib/jquery-ui.min.js"></script>
     <script src="js/app.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6iBuksqPJTyum-cfdpN_nAMkp3_YINJw&callback=mapView.buildMap" onerror="mapView.googleMapsFail()" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCdhb1JqERZQJnQlnYqoMNBT1fX7395X-4&callback=mapView.buildMap" onerror="mapView.googleMapsFail()" async defer></script>
 </body>
 
 </html>
